--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,3 +1,3 @@
-go:
+main:
 	docker build -t docker-dev .
-	docker run -it docker-dev /bin/zsh
+	docker run -it -v /var/run/docker.sock:/var/run/docker.sock docker-dev /bin/zsh
