Fix vim-fireplace submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/scrooloose/nerdtree
 [submodule "vim-plugins/vim-fireplace"]
 	path = vim-plugins/vim-fireplace
-	url = https://github.com/scrooloose/nerdtree
+	url = https://github.com/tpope/vim-fireplace
